# luxbin-chain

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  requirements.txt  vercel.json
.github/workflows/: ci.yml  codeql.yml
autonomous-ai/: README.md  rag_chatbot.py
contracts/src/: EnergyGridControl.sol
cumulus/test/runtime/: Cargo.toml
hct-app/: requirements.txt
luxbin-app/: .env.example  .vercelignore  README.md  package.json
luxbin-app/app/: page.tsx
luxbin-app/app/api/ai/learn/: route.ts
luxbin-app/app/api/chat/: route.ts
luxbin-app/app/create-character/: page.tsx
luxbin-app/app/developers/: page.tsx
luxbin-app/components/: CoinbasePaymasterStatus.tsx  FloatingChatWidget.tsx  LuxbinMultiWaveTranslator.tsx
luxbin-app/lib/: coinbaseCDP.ts
luxbin-app/quantum-protocols/: eip_implementations.py  google-site-verification.html  pyproject.toml  run_eip_on_quantum.py
luxbin-app/quantum-protocols/luxbin/core/: __init__.py  address.py  config.py  light_encoder.py  wavelength.py
luxbin-app/quantum-protocols/luxbin/quantum/: __init__.py  operations.py
luxbin-app/quantum-protocols/luxbin/quantum/entanglement/: __init__.py  bell_pairs.py  ghz_states.py  nv_invitation.py  teleportation.py
luxbin-app/quantum-protocols/luxbin/quantum/photonics/: __init__.py
luxbin-app/quantum-protocols/luxbin/quantum/providers/: __init__.py  base.py  ibm.py
